--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Run tests
       run: |
         cd tests
-        python -m unittest discover tests
+        python -m unittest discover -s tests
 
   deploy:
     needs: build-and-test
